# digital-twin

./: .gitignore  README.md
backend-cpp/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
backend-cpp/src/: PhysicsEngine.cpp  PhysicsEngine.h  Protocol.h  RingBuffer.h  main.cpp
frontend-next/: README.md  package-lock.json  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: LatencyPanel.tsx  ReplayControls.tsx  Scene.tsx  Sidebar.tsx  StressChart.tsx
frontend-next/src/hooks/: useTwinSocket.ts
frontend-next/src/lib/: protocol.ts  ringBuffer.ts
frontend-next/src/store/: twinStore.ts
